iptables/iptables_config
# Fichier de conf Iptables
*nat
:PREROUTING ACCEPT [103139:4706796]
:INPUT ACCEPT [103139:4706796]
:OUTPUT ACCEPT [22:1533]
:POSTROUTING ACCEPT [22:1533]
COMMIT
*filter
:INPUT ACCEPT [747:64379]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [296:54064]
-A INPUT -i eth0 -p tcp  -m limit --limit 3/sec -m state --state new,related,established -m tcp --dport 22 -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=1 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 23 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=2 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp -m limit --limit 2/sec --dport 20:21 -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=3 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=4 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 3306  -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=5 " --nflog-group 1
-A INPUT -i eth0 -p udp -m udp   -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=6 " --nflog-group 1

#Ajout des 5 ports de destination Tcp les plus utilisés sur les log Iptables Cloud et non présents dans le configuration Iptables
-A INPUT -i eth0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 1/sec -m multiport ! --dports 80,23,20,21,22,3306 -j NFLOG --nflog-prefix "ACTION=DENY RULE=34 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=7 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 8080 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=8 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=9 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 25 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=10 " --nflog-group 1
-A INPUT -i eth0 -p tcp -m tcp --dport 143 -m limit --limit 2/sec -j NFLOG --nflog-prefix "ACTION=PERMIT RULE=11 " --nflog-group 1

# Accepter les connexions SSH de l'administrateur 
-A INPUT -i eth0 -p tcp -s 172.43.0.30  --dport 22 -j ACCEPT

# Limiter le nombre de connexions SSH à 30 par heures pour tout autre accès
#-A INPUT -i eth0 -p tcp --dport 22 -m tcp --syn -m connlimit --connlimit-above 100 -m limit --limit 30/hour --limit-burst 1 -j NFLOG --nflog-prefix "ACTION=SSH-LIMIT " --nflog-group 1
COMMIT
